--- a/tmpl/topnav.tmpl
+++ b/tmpl/topnav.tmpl
@@ -44,7 +44,7 @@
                 <?js if (this.tutorials.length) { ?>
                 <div class="dropdown is-hoverable is-right">
                     <a class="dropdown-trigger link">
-                        Tutorials
+                        <?js= betterDocs.tutorialName?>
                         <i class="fas fa-chevron-down fa-xs"></i>
                     </a>
                     <div class="dropdown-menu">
