--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -8,7 +8,7 @@ if(env.conf.templates && env.conf.templates.betterDocs) {
 }
 
 var self = this
-var isTutorial = subtitle === 'Tutorial'
+var isTutorial = subtitle === betterDocs.tutorialName || 'Tutorial'
 
 var search = env.conf.templates && env.conf.templates.search
 
