--- a/tmpl/layout.tmpl
+++ b/tmpl/layout.tmpl
@@ -8,7 +8,7 @@ if(env.conf.templates && env.conf.templates.betterDocs) {
 }
 
 var self = this
-var isTutorial = subtitle === betterDocs.tutorialName || 'Tutorial'
+var isTutorial = subtitle === 'Tutorial'
 
 var search = env.conf.templates && env.conf.templates.search
 
@@ -23,7 +23,7 @@ var search = env.conf.templates && env.conf.templates.search
     <?js= this.partial('topnav.tmpl', { betterDocs }) ?>
     <div id="main">
         <div
-            class="sidebar <?js= isTutorial ? betterDocs.tutorialName : '' ?>"
+            class="sidebar <?js= isTutorial ? 'tutorials' : '' ?>"
             id="sidebarNav"
         >
             <?js if(search) { ?>
@@ -42,7 +42,7 @@ var search = env.conf.templates && env.conf.templates.search
         <div class="core" id="main-content-wrapper">
             <div class="content">
                 <header class="page-title">
-                    <p><?js= subtitle ?></p>
+                    <p><?js= isTutorial ? betterDocs.tutorialName : subtitle ?></p>
                     <h1><?js= title ?></h1>
                 </header>
                 <?js= content ?>
