Sidebar themes for better usability

--- a/styles/base/content.sass
+++ b/styles/base/content.sass
@@ -18,7 +18,7 @@
     font-family: $header-font-family
     font-size: 47px
     font-weight: bold
-    margin: $space-md 0
+    margin: $space-lg 0
   h2
     font-size: 26px
     line-height: 48px
